manifests/overlays/dev/deployment-patch.yaml
# k8s/overlays/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-service
spec:
  template:
    spec:
      containers:
        - name: uiservice
          image: docker.io/lexmarkkubernetes/uiservice:dev # Example of using a dev image tag
